--- a/package.json
+++ b/package.json
@@ -81,11 +81,12 @@
     "@openapitools/openapi-generator-cli": "^2.4.26",
     "@primer/react": "^35.1.0",
     "core-js": "^3.6.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "5.3.0",
     "regenerator-runtime": "0.13.7",
     "rxjs": "~7.4.0",
+    "styled-components": "^5.3.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   }
